# neurolab

./: .gitignore  Makefile  datasets.yaml  pyproject.toml
docs/: job-submission-guide.md
examples/: 01_config_basics.py  02_submit_training_job.py  03_parameter_sweep.py  04_data_management.py  05_preprocessing_pipeline.py  verify_env_switch.py
libs/config/: pyproject.toml
libs/config/neurolab/config/: __init__.py  cluster.py  environment.py
libs/config/neurolab/config/profiles/: delta.yaml  expanse.yaml  jamming.yaml  local.yaml
libs/data/: pyproject.toml
libs/data/neurolab/data/: __init__.py  paths.py  processing.py  registry.py
libs/data/neurolab/data/datasets/: __init__.py  base.py
libs/data/neurolab_data.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
libs/jobs/: pyproject.toml
libs/jobs/neurolab/jobs/: __init__.py  cli.py  logs.py  monitor.py  submit.py  sweep.py
libs/jobs/neurolab/jobs/templates/: gpu_train.slurm.j2
libs/jobs/neurolab_jobs.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
neurolab/: __init__.py
neurolab/jobs/: __init__.py  cli.py  config.py  environment.py  logs.py  monitor.py  submit.py  sweep.py
neurolab/jobs/profiles/: delta.yaml  expanse.yaml  jamming.yaml
neurolab/jobs/templates/: preprocess.slurm.j2
tests/: test_config.py  test_data.py  test_jobs.py
