[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "neurolab"
version = "0.1.0"
description = "Shared infrastructure for scalable EEG research across local and HPC environments"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Young", email = "dt.young112@gmail.com" }]

dependencies = [
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.5",
]

[project.scripts]
neurolab-submit = "neurolab.jobs.cli:main_submit"
neurolab-status = "neurolab.jobs.cli:main_status"
neurolab-logs = "neurolab.jobs.cli:main_logs"

# ── Developer workflow ──────────────────────────────────────────────
# Install in editable mode:
#   pip install -e ".[dev]"

[tool.setuptools.packages.find]
where = ["."]
include = ["neurolab*"]

[tool.setuptools.package-data]
"neurolab.jobs" = ["profiles/*.yaml"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
