[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "neurolab-jobs"
version = "0.1.0"
description = "SLURM job orchestration for Expanse and Delta HPC clusters"
requires-python = ">=3.10"
license = "MIT"

dependencies = [
    "neurolab-config>=0.1.0",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
neurolab-submit = "neurolab.jobs.cli:main_submit"
neurolab-status = "neurolab.jobs.cli:main_status"
neurolab-logs = "neurolab.jobs.cli:main_logs"

[tool.setuptools.packages.find]
where = ["."]
include = ["neurolab.*"]

[tool.setuptools.package-data]
"neurolab.jobs" = ["templates/*.j2"]
